Add runtime version specifications for libgcc and libstdcxx

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -23,6 +23,12 @@ fortran_compiler_version:  # [linux]
   - 14
 
 # ---- Runtime versions
+libgcc_version:     # [linux]
+  - 14.*
+libstdcxx_version:  # [linux]
+  - 14.*
+libgomp_version:       # [linux]
+  - 14.*
 libgcc_ng_version:     # [linux]
   - 14.*
 libstdcxx_ng_version:  # [linux]
