--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -40,6 +40,8 @@ zip_keys:
     - cxx_compiler_version
     - fortran_compiler_version
     - libgcc_ng_version
+    - libstdcxx_version
+    - libgcc_version
     - libstdcxx_ng_version
     - libgomp_version
     
